--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Tryouts For Kid's Soccer: Home</title>
 </head>
 <body>
+<img src= "" alt="Banner image"> 
 
+<hr> 
+  
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
+<hr>
 
 </body>
 </html>
