--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Tryouts For Kid's Soccer: Home</title>
 </head>
 <body>
-<img src= "" alt="Banner image"> 
+<img src="images/banner.png" " alt="Banner image"> 
 
 <hr> 
   
