--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
 </head>
 <body>
 <img src="images/banner.png" " alt="Banner image"> 
+<ul>
+       <li> <a href="index.htm1">Home</a></li>
+       <li> <a href="about.htm1">About Us</a></li>
+       <li> <a href="contact.htm1">Contact</a></li>
+< /ul>
 
+  
 <hr> 
   
-<h1>This is a Heading</h1>
+<h1>This is my home page</h1>
 <p>This is a paragraph.</p>
 <hr>
 
