--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Tryouts For Kid's Soccer: Home</title>
 </head>
 <body>
-<img src="images/BANNER.jpg" " alt="Banner image"> 
+<img src="images/BANNER.jpg" alt="Banner image"> 
 <ul>
        <li> <a href="index.htm1">Home</a></li>
        <li> <a href="about.htm1">About Us</a></li>
