--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <img src="images/BANNER.jpg" alt="Banner image"> 
-<ul>
-       <li> <a href="index.htm1">Home</a></li>
-       <li> <a href="about.htm1">About Us</a></li>
-       <li> <a href="contact.htm1">Contact</a></li>
-</ul>
+       <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact</a></li>
+       </ul>
 
   
 <hr> 
