--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 <img src="images/BANNER.jpg" alt="Banner image"> 
        <ul>
+        <li> <a href
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact</a></li>
