--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   
 <hr> 
   
-<h1>This is my home page</h1>
+<h1>Home Page</h1>
 <p>This is a paragraph.</p>
 <hr>
-
+copy& Oliver Palafox
+Here is a great place to find tryouts: <a href=https://www.utahyouthsoccer.net/tryout-information/ </a> 
+<p><a href="mailto:oliverfut12@gmail.com">Send email</a></p>
 </body>
 </html>
