--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>This is a paragraph.</p>
 <hr>
 copy& Oliver Palafox
-Here is a great place to find tryouts: <a href=https://www.utahyouthsoccer.net/tryout-information/ </a> 
+Here is a great place to find tryouts: <a href=https://www.utahyouthsoccer.net </a> 
 <p><a href="mailto:oliverfut12@gmail.com">Send email</a></p>
 </body>
 </html>
