--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
 <title>Tryouts For Kid's Soccer: Home</title>
 </head>
 <body>
-<img src="images/BANNER.jpg" alt="Banner image"> 
-       <ul>
-        <li> <a href
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="contact.html">Contact</a></li>
-       </ul>
 
-  
+<img src="images/BANNER.jpg" alt="Banner image"> 
+
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="contact.html">Contact</a></li>
+</ul>
+
 <hr> 
   
 <h1>Home Page</h1>
 <p>This is a paragraph.</p>
+
 <hr>
-copy& Oliver Palafox
-Here is a great place to find tryouts: <a href=https://www.utahyouthsoccer.net </a> 
+
+&copy; Oliver Palafox
+
+<p>
+Here is a great place to find tryouts: 
+<a href="https://www.utahyouthsoccer.net">Utah Youth Soccer</a>
+</p>
+
 <p><a href="mailto:oliverfut12@gmail.com">Send email</a></p>
+
 </body>
 </html>
