--- a/about.html
+++ b/about.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Tryouts For Kid's Soccer: About Us</title>
+</head>
+<body>
 
+<img src="images/BANNER.jpg" alt="Banner image"> 
+
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="contact.html">Contact</a></li>
+</ul>
+
+<hr> 
+  
+<h1>About us Page</h1>
+<p>This is a paragraph.</p>
+
+<hr>
+
+&copy; Oliver Palafox
+
+<p>
+Here is a great place to find tryouts: 
+<a href="https://www.utahyouthsoccer.net">Utah Youth Soccer</a>
+</p>
+
+<p><a href="mailto:oliverfut12@gmail.com">Send email</a></p>
+
+</body>
+</html>
