--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <hr> 
   
-<h1>Home Page</h1>
-<p>This is a paragraph.</p>
-
+<h1>Home </h1>
+<p>Club soccer in Utah gives kids the opportunity to grow both on and off the field. By playing at a competitive level, young athletes improve their technical skills, teamwork, and understanding of the game while learning important life lessons like discipline, responsibility, and perseverance. Utah has a strong soccer community with experienced coaches, organized leagues, and quality facilities that help players reach their full potential. Club soccer also allows kids to build lasting friendships, stay active and healthy, and even prepare for high school, college, or higher-level competition. Overall, playing club soccer in Utah helps kids develop confidence, character, and a love for the game.</p>
+<img src= "images/download-1_cropped.jpg">
 <hr>
 
 &copy; Oliver Palafox
