--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
 
 <hr> 
   
-<h1>About us Page</h1>
-<p>This is a paragraph.</p>
+<h1>About us </h1>
+<p>We are dedicated to helping young athletes and their families connect with club soccer opportunities across Utah. Our mission is to make it easy for kids to find the right team by providing up-to-date information about tryouts happening all over the state. We gather and organize details from different clubs, including dates, locations, and contact information, so families can quickly see their options in one place. By simplifying the search process, we help kids focus on what matters most—getting on the field, improving their skills, and enjoying the game.</p>
 
 <hr>
 
