--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,9 @@
 
 <hr> 
   
-<h1>Contact Page</h1>
-<p>This is a paragraph.</p>
+<h1>Contact </h1>
+<p>We would love to hear from you! If you have any questions about upcoming tryouts, need help finding a club team in your area, or would like more information about our website, please feel free to reach out. You can contact us anytime at oliverfut12@gmail.com
+, which is also provided at the bottom of this page for your convenience. We are here to help make your search for the right soccer opportunity as easy as possible.</p>
 
 <hr>
 
